--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -253,8 +253,8 @@
                 <p id="importfilevalidation" hidden="hidden" class="text-danger"></p>
             </div>
             <div class="modal-footer bg-whitesmoke br">
-                <button type="button" class="btn btn-primary" id="importUser">Save</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="importUser">Lưu</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
             </div>
         </div>
     </div>
