--- a/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo cá nhân</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Quản lý danh sách báo cáo bộ môn</h4>
 
                     </div>
                     <div class="card-body">
