--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
@@ -19,6 +19,7 @@
     var perDetail = ((IEnumerable<PersonalReportDetail>)ViewBag.MappingContent);
     int idperiod = Model.report_period_id;
 }
+
 @if (Session["faculty"] == null)
 {
     <div class="#" role="alert">
@@ -51,19 +52,6 @@ else
                     <div class="card">
                         <div class="card-header bg-primary" style="height:100px">
                             <h4 class="text-white" style="font-size:1.75rem">@Model.ReportPeriod.report_period_name</h4>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Thông báo</h4>
-                            <div class="card-header-action">
-                                <a data-collapse="#mycard-collapse" class="btn btn-icon btn-info" href="#"><i class="fas fa-plus"></i></a>
-                            </div>
-                        </div>
-                        <div class="collapse" id="mycard-collapse" style="">
-                            <div class="card-body">
-                                Thời gian báo cáo: @Model.ReportPeriod.start_date - @Model.ReportPeriod.end_date
-                            </div>
                         </div>
                     </div>
                     <div class="col-12">
@@ -230,7 +218,8 @@ else
                                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                                 </div>
                                 <div class="text-right mt-3">
-                                    <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailDepartmentAsync","NotificationDepartment")">Lưu báo cáo</a>
+                                    @*<button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>*@
                                 </div>
                             </div>
                         </div>
