--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -58,19 +58,6 @@ else
                             <h4 class="text-white" style="font-size:1.75rem">@Model.ReportPeriod.report_period_name</h4>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header">
-                            <h4>Thông báo</h4>
-                            <div class="card-header-action">
-                                <a data-collapse="#mycard-collapse" class="btn btn-icon btn-info" href="#"><i class="fas fa-plus"></i></a>
-                            </div>
-                        </div>
-                        <div class="collapse" id="mycard-collapse" style="">
-                            <div class="card-body">
-                                Thời gian báo cáo: @Model.ReportPeriod.start_date - @Model.ReportPeriod.end_date
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
@@ -227,8 +214,8 @@ else
                                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                                 </div>
                                 <div class="text-right mt-3">
-                                    <button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>
-                                    @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>*@
+                                    @*<button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>*@
+                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>
                                 </div>
                             </div>
                         </div>
