--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
@@ -15,10 +15,8 @@
                         <div class="card-header-form">
                             <form>
                                 <div class="input-group">
-                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                                    </div>
+                                    
+                                   
                                 </div>
                             </form>
                         </div>
@@ -37,6 +35,8 @@
                                         <th>Ngày báo cáo</th>
                                         <th>Vai trò</th>
                                         <th>Trạng thái</th>
+                                        <th>Duyệt bên thư ký</th>
+                                        <th>Duyệt bên khoa</th>
                                         <th class="text-center"></th>
                                     </tr>
                                 </thead>
@@ -44,47 +44,67 @@
                                     @foreach (var item in Model)
                                     {
                                         i++;
-                                        <tr class="Search">
-                                            <td class="text-center">
-                                                @i
-                                            </td>
-                                            <td>
-                                                @item.AspNetUser.Email
-                                            </td>
-                                            <td>
-                                                @item.ReportPeriod.report_period_name
-                                            </td>
-                                            <td>
-                                                @String.Format("{0: dd/MM/yyy}", item.date_report)
-                                            </td>
-                                            <td>
-                                                @item.AspNetUser.AspNetRoles.First().Name
-                                            </td>
-                                            <td>
-                                                @if (item.status == "Đã báo cáo")
-                                                {
-                                                    <div class="badge badge-success">@item.status</div>
-                                                }
-                                                else if (item.status == "Trễ báo cáo")
-                                                {
-                                                    <div class="badge badge-warning">@item.status</div>
-                                                }
-                                                else
-                                                {
-                                                    <div class="badge badge-danger">@item.status</div>
-                                                }
-                                            </td>
-                                            <td class="text-center">
-                                                <div class="buttons">
-                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("DepartmentDetail","DepartmentReport", new {id = item.department_report_id})">
-                                                        Xem
-                                                    </a>
-                                                    <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("DepartmentReportEdit","DepartmentReport", new {id = item.department_report_id})">
-                                                        Chỉnh sửa
-                                                    </a>
-                                                </div>
-                                            </td>
-                                        </tr>
+                                    <tr class="Search">
+                                        <td class="text-center">
+                                            @i
+                                        </td>
+                                        <td>
+                                            @item.AspNetUser.Email
+                                        </td>
+                                        <td>
+                                            @item.ReportPeriod.report_period_name
+                                        </td>
+                                        <td>
+                                            @String.Format("{0: dd/MM/yyy}", item.date_report)
+                                        </td>
+                                        <td>
+                                            @item.AspNetUser.AspNetRoles.First().Name
+                                        </td>
+                                        <td>
+                                            @if (item.status == "Đã báo cáo")
+                                            {
+                                                <div class="badge badge-success">@item.status</div>
+                                            }
+                                            else if (item.status == "Trễ báo cáo")
+                                            {
+                                                <div class="badge badge-warning">@item.status</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="badge badge-danger">@item.status</div>
+                                            }
+                                        </td>
+                                        <td>
+                                            @if (item.status_secretary == "Đã duyệt")
+                                            {
+                                                <div class="badge badge-success">@item.status_secretary</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="badge badge-danger">@item.status_secretary</div>
+                                            }
+                                        </td>
+                                        <td>
+                                            @if (item.status_faculty == "Đã duyệt")
+                                            {
+                                                <div class="badge badge-success">@item.status_faculty</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="badge badge-danger">@item.status_faculty</div>
+                                            }
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="buttons">
+                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("DepartmentDetail","DepartmentReport", new {id = item.department_report_id})">
+                                                    Xem
+                                                </a>
+                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("DepartmentReportEdit","DepartmentReport", new {id = item.department_report_id})">
+                                                    Chỉnh sửa
+                                                </a>
+                                            </div>
+                                        </td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
