--- a/MonthlyStatement/Areas/Personal/Views/Static/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Static/Index.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
+
 <section class="section">
     <div class="section-body">
         <div class="row">
@@ -14,46 +16,59 @@
                         <h4 class="text-white" style="font-size:1.75rem">Thống kê các kỳ báo cáo</h4>
 
                     </div>
-                    <div class="tableContainer">
-                        <table>
+                    <div class="card-body">
+                        <form action="@Url.Action("Index","Static")">
+                            <div class="row" style="margin-bottom: 20px">
+                                <div class="col-sm-12 col-md-2">
+                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelPersonal","Static")">Xuất file excel</a>
+                                </div>
+                            </div>
 
-                            <thead>
-                                <tr class="columnHeaders">
-                                    <th class="columnHeader emptyCell" title="Empty cell"></th>
-                                    <th scope="col" class="columnHeader">Hoàn thành</th>
-                                    <th scope="col" class="columnHeader">Chưa hoàn thành</th>
-                                </tr>
-                            </thead>
-                            <tbody>
+                        </form>
+
+                        <div class="tableContainer">
+                            <table>
+
+                                <thead>
+                                    <tr class="columnHeaders">
+                                        <th class="columnHeader emptyCell" title="Empty cell"></th>
+                                        <th scope="col" class="columnHeader">Hoàn thành</th>
+                                        <th scope="col" class="columnHeader">Chưa hoàn thành</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
 
 
-                                @foreach (var item in Model)
-                                {
-                                <tr class="tableBodyRow">
-                                    <th scope="row" class="rowHeader">@item.report_period_name</th>
-                                    @if (item.PersonalReports.Any(p => p.AspNetUser.Email == User.Identity.Name))
+                                    @foreach (var item in Model)
                                     {
-                                        <td>
-                                            <span title="Feature is included" class="featureCheck">✔</span>
-                                        </td>
-                                        <td>
-                                        </td>
-                                    }
-                                    else
-                                    {
-                                        <td>
-                                        </td>
-                                        <td>
-                                            <span title="Feature is not included" class="featureX">✘</span>
-                                        </td>
-                                    }
+                                        <tr class="tableBodyRow">
+                                            <th scope="row" class="rowHeader">@item.report_period_name</th>
+                                            @if (item.PersonalReports.Any(p => p.AspNetUser.Email == User.Identity.Name ))
+                                            {
+                                                <td>
+                                                    <span title="Feature is included" class="featureCheck">✔</span>
+                                                </td>
+                                                <td>
+                                                </td>
+                                            }
+                                            else
+                                            {
+                                                <td>
+                                                </td>
+                                                <td>
+                                                    <span title="Feature is not included" class="featureX">✘</span>
+                                                </td>
+                                            }
 
-                                </tr>
-                                }
-                            </tbody>
-                        </table>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
 
+                        </div>
                     </div>
+
+                   
                 </div>
             </div>
         </div>
