--- a/MonthlyStatement/Areas/Staff/Views/StaticStaff/Index.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaticStaff/Index.cshtml
@@ -14,46 +14,61 @@
                         <h4 class="text-white" style="font-size:1.75rem">Thống kê các kỳ báo cáo</h4>
 
                     </div>
-                    <div class="tableContainer">
-                        <table>
 
-                            <thead>
-                                <tr class="columnHeaders">
-                                    <th class="columnHeader emptyCell" title="Empty cell"></th>
-                                    <th scope="col" class="columnHeader">Hoàn thành</th>
-                                    <th scope="col" class="columnHeader">Chưa hoàn thành</th>
-                                </tr>
-                            </thead>
-                            <tbody>
+                    <div class="card-body">
+                        <form action="@Url.Action("Index","StaticStaff")">
+                            <div class="row" style="margin-bottom: 20px">
+                                <div class="col-sm-12 col-md-2">
+                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelStaff","StaticStaff")">Xuất file excel</a>
+                                </div>
+                            </div>
 
+                        </form>
 
-                                @foreach (var item in Model)
-                                {
-                                    <tr class="tableBodyRow">
-                                        <th scope="row" class="rowHeader">@item.report_period_name</th>
-                                        @if (item.StaffReports.Any(p => p.AspNetUser.Email == User.Identity.Name))
-                                        {
-                                            <td>
-                                                <span title="Feature is included" class="featureCheck">✔</span>
-                                            </td>
-                                            <td>
-                                            </td>
-                                        }
-                                        else
-                                        {
-                                            <td>
-                                            </td>
-                                            <td>
-                                                <span title="Feature is not included" class="featureX">✘</span>
-                                            </td>
-                                        }
+                        <div class="tableContainer">
+                            <table>
 
+                                <thead>
+                                    <tr class="columnHeaders">
+                                        <th class="columnHeader emptyCell" title="Empty cell"></th>
+                                        <th scope="col" class="columnHeader">Hoàn thành</th>
+                                        <th scope="col" class="columnHeader">Chưa hoàn thành</th>
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+
+
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr class="tableBodyRow">
+                                            <th scope="row" class="rowHeader">@item.report_period_name</th>
+                                            @if (item.StaffReports.Any(p => p.AspNetUser.Email == User.Identity.Name))
+                                            {
+                                                <td>
+                                                    <span title="Feature is included" class="featureCheck">✔</span>
+                                                </td>
+                                                <td>
+                                                </td>
+                                            }
+                                            else
+                                            {
+                                                <td>
+                                                </td>
+                                                <td>
+                                                    <span title="Feature is not included" class="featureX">✘</span>
+                                                </td>
+                                            }
+
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
 
                     </div>
+
+                    
                 </div>
             </div>
         </div>
