--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
@@ -135,6 +135,9 @@
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
+                            <div class="input-group mb-3">
+                                <input class="form-control" src="~/assets/FileMinhChung/" disabled>
+                            </div>
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
                             </div>
